--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "core-js": "^2.6.5",
     "iview": "^3.5.4",
     "jquery": "^3.6.0",
